--- a/src/app/components/services-card/services-card.component.html
+++ b/src/app/components/services-card/services-card.component.html
@@ -4,12 +4,10 @@
   </mat-card-header>
   <mat-card-content>
     <ng-content></ng-content>
-  </mat-card-content>
-  <mat-card-footer>
-    <mat-list>
+    <mat-chip-listbox>
     @for(keyword of keywordList; track keyword){
-      <mat-list-item>{{keyword}}</mat-list-item>
+      <mat-chip>{{keyword}}</mat-chip>
     }
-    </mat-list>
-  </mat-card-footer>
+    </mat-chip-listbox>
+  </mat-card-content>
 </mat-card>
