--- a/src/app/pages/services-page/services-page.component.html
+++ b/src/app/pages/services-page/services-page.component.html
@@ -1,5 +1,12 @@
 <app-page-template [title]="'Services'">
+  <div class="saturate-50">
+    We offer the following services:
+  </div>
+  <div class="grid grid-cols-3 gap-4">
   @for(service of services; track service) {
+    <div>
     <app-services-card [serviceTitle]="service.name" [keywordList]="service.keywords">{{service.description}}</app-services-card>
-  }
+    </div>
+      }
+  </div>
 </app-page-template>
