added services list

--- a/src/layout/header/header.component.html
+++ b/src/layout/header/header.component.html
@@ -4,7 +4,7 @@
       <button mat-icon-button><mat-icon>menu</mat-icon></button>
     </span>
     <span class="me-2" >
-      <div matRipple [matRippleCentered]="true" [routerLink]="'/home'" class="text-2xl cursor-pointer">Trueblood Services</div>
+      <img ngSrc="../../assets/ts_logo.jpg" [routerLink]="'/home'" height="200" width="200" alt="Trueblood Services logo">
     </span>
     @for (link of NAVIGATION_LINKS; track link) {
       <span class="me-2">
