--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @use '@angular/material' as mat;
-@use './assets/styles/trueblood-theme';
+@use 'assets/styles/trueblood-theme';
 @use '@angular/material/prebuilt-themes/azure-blue.css';
 @include mat.core();
 @tailwind base;
