--- a/src/layout/header/header.component.html
+++ b/src/layout/header/header.component.html
@@ -4,7 +4,10 @@
       <button mat-icon-button><mat-icon>menu</mat-icon></button>
     </span>
     <span class="me-2" >
-      <img ngSrc="../../assets/ts_logo.jpg" [routerLink]="'/home'" height="200" width="200" alt="Trueblood Services logo">
+      <img class="cursor-pointer" ngSrc="../../assets/ts_logo.jpg" [routerLink]="'/home'" height="50" width="50" alt="Trueblood Services logo">
+    </span>
+    <span class="me-2">
+      <div matRipple [matRippleCentered]="true" class="text-3xl cursor-pointer" [routerLink]="'/home'">Trueblood Services</div>
     </span>
     @for (link of NAVIGATION_LINKS; track link) {
       <span class="me-2">
