--- a/src/layout/footer/footer.component.html
+++ b/src/layout/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<mat-toolbar>
+  <mat-toolbar-row>
+    <span>
+      <div>Copyright {{currentYear}} Trueblood Services, LLC. All Rights Reserved.</div>
+    </span>
+  </mat-toolbar-row>
+</mat-toolbar>
