--- a/src/app/components/services-card/services-card.component.html
+++ b/src/app/components/services-card/services-card.component.html
@@ -1,6 +1,6 @@
-<mat-card [appearance]="'raised'">
+<mat-card class="services-card" [appearance]="'raised'">
   <mat-card-header>
-    <mat-card-title><h3>{{serviceTitle}}</h3></mat-card-title>
+    <mat-card-title><h4>{{serviceTitle}}</h4></mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <ng-content></ng-content>
