--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,6 @@
 <app-page-template [title]="'Trueblood Services'">
-  Hey
 
+<app-services-card [serviceTitle]="'Locations'" [keywordList]="['Cedar Rapids','Marion','Iowa City','North Liberty','Robins','Hiawatha','Coralville']">
+  We serve the following cities in the Corridor:
+</app-services-card>
 </app-page-template>
