--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <app-page-template [title]="'Trueblood Services'">
-
-<app-services-card [serviceTitle]="'Locations'" [keywordList]="['Cedar Rapids','Marion','Iowa City','North Liberty','Robins','Hiawatha','Coralville']">
+<app-hero></app-hero>
+<app-services-card [serviceTitle]="'Locations'" [keywordList]="['Cedar Rapids','Marion','Iowa City','North Liberty','Coralville']">
   We serve the following cities in the Corridor:
 </app-services-card>
 </app-page-template>
