More updates to css and layout

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,5 +1,5 @@
 <div class="hero-container bg-sky-800 rounded-2xl">
-  <div class="text-2xl">
+  <div class="text-center text-white text-2xl">
     <h2>Hey</h2>
   </div>
 </div>
