--- a/src/app/components/services-card/services-card.component.html
+++ b/src/app/components/services-card/services-card.component.html
@@ -1,6 +1,6 @@
-<mat-card class="transition hover:-translate-y-1 duration-300 hover:border-sky-300 hover:shadow-xl services-card" [appearance]="'outlined'">
+<mat-card class="transition hover:-translate-y-1 duration-300 hover:border-sky-300 hover:shadow-xl services-card" [appearance]="'raised'">
   <mat-card-header>
-    <mat-card-title><h4>{{serviceTitle}}</h4></mat-card-title>
+    <mat-card-title><h4 class="text-sky-900">{{serviceTitle}}</h4></mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <ng-content></ng-content>
