More updates to css and layout

--- a/src/app/components/page-template/page-template.component.html
+++ b/src/app/components/page-template/page-template.component.html
@@ -1,4 +1,4 @@
 <div class="container xl:max-w-6xl mx-auto px-4">
-<h1>{{title}}</h1>
+<h1 class="text-sky-900">{{title}}</h1>
 <ng-content></ng-content>
 </div>
