--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,5 +1,6 @@
-<div class="hero-container bg-sky-800 rounded-2xl">
-  <div class="text-center text-white text-2xl">
-    <h2>Hey</h2>
+<div class="hero-container justify-center items-center flex bg-sky-800 rounded-2xl">
+  <div class="text-center text-white">
+    <h2 class="text-2xl">Text Header</h2>
+    <p class="font-bold">Bold FONT!!!</p>
   </div>
 </div>
