--- a/src/app/components/services-card/services-card.component.scss
+++ b/src/app/components/services-card/services-card.component.scss
@@ -1,9 +1,13 @@
 .services-card {
-  height: 300px;
-  max-width: 400px;
+  @media(min-width: 768px) {
+    height: 300px;
+    width: 400px;
+  }
+  @media(min-width: 1024px) {
+    height: 300px;
+    width: 400px;
+  }
+
+
   background: #ffffff;
-}
-
-.keywords {
-
 }
