--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <app-hero></app-hero>
-<app-page-template [title]="'Trueblood Services'">
+<app-page-template [title]="''">
 <app-services-card [serviceTitle]="'Locations'" [keywordList]="['Cedar Rapids','Marion','Iowa City','North Liberty','Coralville']">
   We serve the following cities in the Corridor:
 </app-services-card>
