--- a/src/layout/header/header.component.html
+++ b/src/layout/header/header.component.html
@@ -1,18 +1,27 @@
 <mat-toolbar >
   <mat-toolbar-row class="bg-sky-100">
     <span class="me-2">
-      <button mat-icon-button><mat-icon>menu</mat-icon></button>
+      <button [matMenuTriggerFor]="mainMenu" mat-icon-button><mat-icon>menu</mat-icon></button>
     </span>
-    <span class="me-2" >
+    <span class="invisible md:visible me-2" >
       <img class="cursor-pointer" ngSrc="../../assets/ts_logo.png" [routerLink]="'/home'" height="80" width="80" alt="Trueblood Services logo">
     </span>
     <span class="me-2">
       <div matRipple [matRippleCentered]="true" class="text-3xl cursor-pointer" [routerLink]="'/home'">Trueblood Services</div>
     </span>
     @for (link of NAVIGATION_LINKS; track link) {
-      <span class="me-2">
+      <span class="invisible md:visible me-2">
         <div matRipple [matRippleCentered]="true" class="rounded-md px-3 py-2 text-sm font-medium hover:bg-sky-700 hover:text-white cursor-pointer" [routerLink]="'/' + link.route">{{link.title}}</div>
       </span>
     }
   </mat-toolbar-row>
 </mat-toolbar>
+
+<mat-menu [hasBackdrop]="false" #mainMenu>
+  <div class="bg-sky-100 grid" [style.width]="'150px'">
+    <button class="menu-button hover:bg-sky-900 hover:text-white" [style.height]="'50px'" matRipple [routerLink]="'/home'">Home</button>
+    <button class="menu-button hover:bg-sky-900 hover:text-white" [style.height]="'50px'" matRipple [routerLink]="'/about'">About</button>
+    <button class="menu-button hover:bg-sky-900 hover:text-white" [style.height]="'50px'" matRipple [routerLink]="'/services'">Services</button>
+    <button class="menu-button hover:bg-sky-900 hover:text-white" [style.height]="'50px'" matRipple [routerLink]="'/contact'">Contact</button>
+  </div>
+</mat-menu>
