--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -1,3 +1,16 @@
 <app-page-template [title]="'Contact'">
-  <h2>Test 2</h2>
+  <div [style.height]="'100vh'">
+    <p>ANNOYING TEST</p>
+  </div>
+  <div id="quote" [style.height]="'100vh'">
+    <h2>Request a free quote</h2>
+    <mat-list>
+      <mat-list-item>
+        <a href="mailto:trueblood.travis@gmail.com"><mat-icon>email</mat-icon>Trueblood.Travis&#64;gmail.com</a>
+      </mat-list-item>
+      <mat-list-item>
+        <a href="tel:+1.3195388269"><mat-icon>phone</mat-icon>(319) 538-8269</a>
+      </mat-list-item>
+    </mat-list>
+  </div>
 </app-page-template>
