--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -1,6 +1,4 @@
 <app-page-template [title]="'Contact'">
-  <div id="quote">
-    <h2>Request a free quote</h2>
     <mat-list>
       <mat-list-item>
         <a href="mailto:trueblood.travis@gmail.com"><mat-icon>email</mat-icon>Trueblood.Travis&#64;gmail.com</a>
@@ -9,9 +7,22 @@
         <a href="tel:+1.3195388269"><mat-icon>phone</mat-icon>(319) 538-8269</a>
       </mat-list-item>
     </mat-list>
-  </div>
-<div>
-  <mat-form-field appearance="fill">
+  <div id="quote">
+    <mat-card [appearance]="'outlined'" class="bg-sky-900">
+     <mat-card-header>
+       <mat-card-title>
+    <h2>Request a free quote</h2>
+       </mat-card-title>
+       <mat-card-subtitle>
+         Fill out the form below and we will contact you with a quote as soon as possible.
+       </mat-card-subtitle>
+     </mat-card-header>
+       <mat-card-content>
+         <mat-form-field>
+    <mat-label>Enter your name</mat-label>
+    <input matInput>
+         </mat-form-field>
+  <mat-form-field [style.width]="'100%'" appearance="fill">
     <mat-label>Select Service Category</mat-label>
     <mat-select>
       @for(service of services; track service) {
@@ -20,6 +31,8 @@
       <mat-option value="other">Other</mat-option>
     </mat-select>
   </mat-form-field>
+       </mat-card-content>
+    </mat-card>
 </div>
 </app-page-template>
 
