--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -41,6 +41,9 @@
     </mat-select>
   </mat-form-field>
        </mat-card-content>
+      <mat-card-actions>
+        <button mat-raised-button>Request Quote</button>
+      </mat-card-actions>
     </mat-card>
 </div>
 </app-page-template>
