--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -8,7 +8,7 @@
       </mat-list-item>
     </mat-list>
   <div id="quote">
-    <mat-card [appearance]="'raised'" class="w-1/2 bg-sky-900">
+    <mat-card [appearance]="'raised'" class="lg:w-1/2 bg-sky-900">
      <mat-card-header>
        <mat-card-title>
     <h2>Request a free quote</h2>
