--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -1,3 +1,36 @@
 .hero-container {
-min-height: 500px;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  border-radius: 20px; /* Add rounded corners */
+  overflow: hidden; /* Prevent child elements from overflowing the rounded corners */
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: inherit; /* Inherit parent's border radius */
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 0 20px;
+  text-align: center;
+  /* No border-radius needed here */
+}
+
+.content h1,
+.content p {
+  margin: 0;
 }
