added descriptions for services page.

--- a/src/layout/footer/footer.component.html
+++ b/src/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <mat-toolbar-row>
+  <mat-toolbar-row class="bg-gray-700 text-white text-sm font-thin">
     <span>
       <div>Copyright {{currentYear}} Trueblood Services, LLC. All Rights Reserved.</div>
     </span>
