--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -7,44 +7,7 @@
         <a href="tel:+1.3195388269"><mat-icon>phone</mat-icon>(319) 538-8269</a>
       </mat-list-item>
     </mat-list>
-  <div id="quote">
-    <mat-card [appearance]="'raised'" class="lg:w-1/2 bg-sky-900">
-     <mat-card-header>
-       <mat-card-title>
-    <h2>Request a free quote</h2>
-       </mat-card-title>
-       <mat-card-subtitle>
-         Fill out the form below and we will contact you with a quote as soon as possible.
-       </mat-card-subtitle>
-     </mat-card-header>
-       <mat-card-content>
-         <mat-form-field [style.width]="'100%'">
-    <mat-label>Enter your name</mat-label>
-    <input matInput>
-         </mat-form-field>
-         <mat-form-field [style.width]="'100%'">
-           <mat-label>Select your city</mat-label>
-           <mat-select>
-             @for(city of cities; track city) {
-               <mat-option value="{{city.name}}">{{city.name}}</mat-option>
-             }
-             <mat-option value="other">Other Location</mat-option>
-           </mat-select>
-         </mat-form-field>
-  <mat-form-field [style.width]="'100%'" appearance="fill">
-    <mat-label>Select Service Category</mat-label>
-    <mat-select>
-      @for(service of services; track service) {
-        <mat-option value="{{service.name}}">{{service.name}}</mat-option>
-      }
-      <mat-option value="other">Other</mat-option>
-    </mat-select>
-  </mat-form-field>
-       </mat-card-content>
-      <mat-card-actions>
-        <button mat-raised-button>Request Quote</button>
-      </mat-card-actions>
-    </mat-card>
-</div>
+  <app-contact-form></app-contact-form>
+
 </app-page-template>
 
