--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @use '@angular/material' as mat;
 @use 'assets/styles/trueblood-theme';
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
