--- a/src/layout/footer/footer.component.html
+++ b/src/layout/footer/footer.component.html
@@ -3,5 +3,21 @@
     <span>
       <div>Copyright {{currentYear}} Trueblood Services, LLC. All Rights Reserved.</div>
     </span>
+    <span class="mx-auto">
+    </span>
+    <span class="invisible md:visible me-2">
+      <div class="row-span-2">
+        <div class="inline-flex">
+      <a href="mailto:trueblood.travis@gmail.com">
+        <mat-icon>email</mat-icon>
+        Trueblood.Travis&#64;gmail.com
+      </a>
+        </div>
+        <div>
+          <mat-icon>phone</mat-icon>
+      <a href="tel:+1.3195388269">(319) 538-8269</a>
+        </div>
+      </div>
+    </span>
   </mat-toolbar-row>
 </mat-toolbar>
