--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -1,4 +1,5 @@
 <app-page-template [title]="'Contact'">
+  <p>Call or email today to schedule an appointment for an estimate.</p>
     <mat-list>
       <mat-list-item>
         <a href="mailto:trueblood.travis@gmail.com"><mat-icon>email</mat-icon>Trueblood.Travis&#64;gmail.com</a>
@@ -7,7 +8,7 @@
         <a href="tel:+1.3195388269"><mat-icon>phone</mat-icon>(319) 538-8269</a>
       </mat-list-item>
     </mat-list>
-  <app-contact-form></app-contact-form>
+<!--  <app-contact-form></app-contact-form>-->
 
 </app-page-template>
 
