--- a/src/layout/header/header.component.html
+++ b/src/layout/header/header.component.html
@@ -20,7 +20,7 @@
 <mat-menu #mainMenu>
   <div class="bg-sky-100 grid" [style.width]="'150px'">
     <button class="menu-button text-sm font-medium hover:bg-sky-900 hover:text-white" [style.height]="'50px'" matRipple [routerLink]="'/home'">Home</button>
-    <button class="menu-button text-sm font-medium hover:bg-sky-900 hover:text-white" [style.height]="'50px'" matRipple [routerLink]="'/about'">About</button>
+<!--    <button class="menu-button text-sm font-medium hover:bg-sky-900 hover:text-white" [style.height]="'50px'" matRipple [routerLink]="'/about'">About</button>-->
     <button class="menu-button text-sm font-medium hover:bg-sky-900 hover:text-white" [style.height]="'50px'" matRipple [routerLink]="'/services'">Services</button>
     <button class="menu-button text-sm font-medium hover:bg-sky-900 hover:text-white" [style.height]="'50px'" matRipple [routerLink]="'/contact'">Contact</button>
   </div>
