prepared site for initial launch.

--- a/src/layout/header/header.component.html
+++ b/src/layout/header/header.component.html
@@ -7,7 +7,7 @@
       <img class="cursor-pointer" ngSrc="../../assets/ts_logo.png" [routerLink]="'/home'" [style.min-width]="'50px'" height="80" width="80" alt="Trueblood Services logo">
     </span>
     <span class="me-2">
-      <div matRipple [matRippleCentered]="true" class="text-3xl cursor-pointer" [routerLink]="'/home'">Trueblood Services</div>
+      <div matRipple [matRippleCentered]="true" class="font-bold lg:text-3xl cursor-pointer" [routerLink]="'/home'">Trueblood Services</div>
     </span>
     @for (link of NAVIGATION_LINKS; track link) {
       <span class="invisible md:visible me-2">
