--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -3,7 +3,7 @@
   [height]="'500px'"
   [customClass]="'custom-hero'"
 >
-  <h1 class="2xl:text-9xl xl:text-7xl lg:text-6xl text-5xl text font-bold">Trueblood Services</h1>
+  <h1 class="2xl:text-9xl xl:text-7xl lg:text-6xl text-5xl text font-bold">Trueblood Handyman Services</h1>
     <div class="grid md:grid-cols-2 gap-4">
   <div class="md:my-4 max-sm:mt-2">
     <a mat-raised-button href="tel:+1-319-538-8269">
