--- a/src/layout/footer/footer.component.html
+++ b/src/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <mat-toolbar-row class="bg-gray-700 text-white text-sm font-thin">
     <span>
-      <div>Copyright {{currentYear}} Trueblood Services, LLC. All Rights Reserved.</div>
+      <div>Copyright {{currentYear}} Trueblood Handyman Services, LLC. All Rights Reserved.</div>
     </span>
     <span class="mx-auto">
     </span>
